Prevent 'Reports' bullet point on About page shifting to left when window size is large - readers may have missed it.

--- a/css/main.css
+++ b/css/main.css
@@ -369,3 +369,9 @@ h6:hover .header-link {
 .highlight code table {
   margin-bottom: 0px;
 }
+
+@media all and (min-width: 1200px) {
+  p + ul {
+    overflow: hidden;
+  }
+}
